[showyourwork] revisions II
Signed-off-by: nstarman <nstarman@users.noreply.github.com>

--- a/src/static/planck18_parameters.ini
+++ b/src/static/planck18_parameters.ini
@@ -15,7 +15,7 @@ T_cmb = 2.7255
 omega_b = 0.02238280
 N_ur = 3.046
 omega_cdm = 0.1201075
-a_today = 1.
+# a_today = 1.
 
 #--------------------------------
 #----> thermodynamics parameters:
