--- a/environment.yml
+++ b/environment.yml
@@ -17,6 +17,7 @@ dependencies:
 
   - pip:
     - showyourwork
-    - classy==2.9.4.0
+    - classy>3.2
+    - flt
     - git+https://github.com/GalOrrery/interpolated-coordinates.git
-    - git+https://github.com/cosmology-api/cosmology-compat-class.git
+    - git+https://github.com/nstarman/cosmology-compat-class.git@spectral_distortions_paper_branch
