--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,59 +1,96 @@
+ci:
+  autoupdate_commit_msg: "chore: update pre-commit hooks"
+  autofix_commit_msg: "style: pre-commit fixes"
+  autoupdate_schedule: "quarterly"
+
+default_stages: [pre-commit, pre-push]
+
 repos:
+  - repo: https://github.com/commitizen-tools/commitizen
+    rev: v3.22.0
+    hooks:
+      - id: commitizen
+      # - id: commitizen-branch
+      #   stages: [push]
+
+  - repo: meta
+    hooks:
+      - id: check-useless-excludes
+
+  - repo: https://github.com/scientific-python/cookie
+    rev: 2024.03.10
+    hooks:
+      - id: sp-repo-review
+
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.6.0
+    rev: "v4.6.0"
     hooks:
       - id: check-added-large-files
-      - id: check-ast
-      - id: check-builtin-literals
       - id: check-case-conflict
-      - id: check-docstring-first
       - id: check-merge-conflict
-      - id: check-symlinks
-      - id: check-toml
       - id: check-yaml
       - id: debug-statements
-      - id: destroyed-symlinks
-      - id: detect-private-key
       - id: end-of-file-fixer
-        exclude: "src/tex"
-      - id: requirements-txt-fixer
+      - id: mixed-line-ending
+      - id: name-tests-test
+        args: ["--pytest-test-first"]
       - id: trailing-whitespace
-        exclude: "src/tex"
 
   - repo: https://github.com/pre-commit/pygrep-hooks
-    rev: v1.10.0
+    rev: "v1.10.0"
     hooks:
-      - id: python-check-blanket-noqa
-      - id: python-check-mock-methods
-      - id: python-no-eval
-      - id: python-no-log-warn
-      - id: python-use-type-annotations
       - id: rst-backticks
       - id: rst-directive-colons
       - id: rst-inline-touching-normal
 
-  - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: "v0.4.1"
+  - repo: https://github.com/python-jsonschema/check-jsonschema
+    rev: 0.28.2
     hooks:
-      - id: ruff
-        args:
-          - --fix
+      - id: check-dependabot
+      - id: check-github-workflows
+      - id: check-readthedocs
 
-  - repo: https://github.com/psf/black
-    rev: 24.4.0
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: "v0.3.7"
     hooks:
-      - id: black
-        additional_dependencies: [toml]
-      - id: black-jupyter
-        additional_dependencies: [toml]
+      # Run the linter
+      - id: ruff
+        types_or: [python, pyi, jupyter]
+        args: ["--fix", "--show-fixes"]
+      # Run the formatter
+      - id: ruff-format
+        types_or: [python, pyi, jupyter]
+
+  - repo: https://github.com/adamchainz/blacken-docs
+    rev: "1.16.0"
+    hooks:
+      - id: blacken-docs
+        additional_dependencies: [black==23.*]
+
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: "v4.0.0-alpha.8"
+    hooks:
+      - id: prettier
+        types_or: [yaml, markdown, html, css, scss, javascript, json]
+        args: [--prose-wrap=always]
 
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: 'v1.9.0'
+    rev: "v1.9.0"
     hooks:
       - id: mypy
+        files: src
         additional_dependencies:
-          - "numpy>1.22"
-        args:
-        - --strict
-        - --ignore-missing-imports
-        - --python-version=3.10
+          - pytest
+
+  - repo: https://github.com/abravalheri/validate-pyproject
+    rev: v0.16
+    hooks:
+      - id: validate-pyproject
+
+  - repo: local
+    hooks:
+      - id: disallow-caps
+        name: Disallow improper capitalization
+        language: pygrep
+        entry: PyBind|Numpy|Cmake|CCache|Github|PyTest
+        exclude: .pre-commit-config.yaml
