--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,27 @@ line-length = 88
 
 [tool.mypy]
     strict = true
+    warn_unreachable = true
+    enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
+
+
+[tool.repo-review]
+ignore = [
+    "GH102",
+    "GH103",
+    "PC160",
+    "PP",
+    "PY",
+    "RTD100"
+]
+
 
 [tool.ruff]
+src = ["src"]
 line-length = 88
+target-version = "py310"
+
+[tool.ruff.lint]
 select = ["ALL"]
 ignore = [
     "ANN101", "ANN102", "ANN401",
@@ -22,9 +40,9 @@ ignore = [
     "TID252",  # Relative imports from parent modules are banned
 ]
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "src/scripts/*.py" = ["INP001"]  #  implicit namespace package
 
-[tool.ruff.isort]
+[tool.ruff.lint.isort]
 known-first-party = ["paths"]
 known-local-folder = ["src", "cosmo"]
